--- a/front_end/package.json
+++ b/front_end/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "7.8.4",
     "@babel/runtime": "^7.8.3",
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.5.1",
+    "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -26,31 +28,66 @@
     "@types/redux-actions": "^2.6.1",
     "@types/styled-components": "^4.4.2",
     "@types/validator": "^12.0.1",
+    "@typescript-eslint/eslint-plugin": "^2.10.0",
+    "@typescript-eslint/parser": "^2.10.0",
     "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.19.2",
+    "babel-eslint": "10.0.3",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "8.0.6",
+    "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-react-app": "^9.1.0",
+    "babel-preset-react-app": "^9.1.1",
+    "camelcase": "^5.3.1",
+    "case-sensitive-paths-webpack-plugin": "2.3.0",
     "chart.js": "^2.9.3",
-    "dotenv": "^8.2.0",
+    "css-loader": "3.4.2",
+    "dotenv": "8.2.0",
+    "dotenv-expand": "5.1.0",
     "email-validator": "^2.0.4",
+    "eslint": "^6.6.0",
+    "eslint-config-react-app": "^5.2.0",
+    "eslint-loader": "3.0.3",
+    "eslint-plugin-flowtype": "4.6.0",
+    "eslint-plugin-import": "2.20.0",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.18.0",
+    "eslint-plugin-react-hooks": "^1.6.1",
     "faker": "^4.1.0",
+    "file-loader": "4.3.0",
+    "fs-extra": "^8.1.0",
     "google-palette": "^1.1.0",
+    "html-webpack-plugin": "4.0.0-beta.11",
+    "identity-obj-proxy": "3.0.0",
     "immer": "^5.3.2",
     "immutable": "^4.0.0-rc.12",
+    "jest": "24.9.0",
+    "jest-environment-jsdom-fourteen": "1.0.1",
+    "jest-resolve": "24.9.0",
+    "jest-watch-typeahead": "0.4.2",
     "jsonwebtoken": "^8.5.1",
+    "mini-css-extract-plugin": "0.9.0",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "open-color": "^1.7.0",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
     "password-validator": "^5.0.3",
+    "pnp-webpack-plugin": "1.6.0",
+    "postcss-flexbugs-fixes": "4.1.0",
+    "postcss-loader": "3.0.0",
+    "postcss-normalize": "8.0.1",
+    "postcss-preset-env": "6.7.0",
+    "postcss-safe-parser": "4.0.1",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-addons-update": "^15.6.2",
     "react-animate-on-scroll": "^2.1.5",
+    "react-app-polyfill": "^1.0.6",
     "react-async-script-loader": "^0.3.0",
     "react-chartjs-2": "^2.9.0",
     "react-countup": "^4.3.3",
     "react-datepicker": "^2.12.1",
-    "react-dev-utils": "^10.0.0",
+    "react-dev-utils": "^10.1.0",
     "react-dom": "^16.12.0",
     "react-google-login": "^5.0.7",
     "react-icons": "^3.9.0",
@@ -62,21 +99,31 @@
     "react-page-scroller": "^2.0.6-beta",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-pender": "^2.0.12",
+    "resolve": "1.15.0",
+    "resolve-url-loader": "3.1.1",
+    "sass-loader": "8.0.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
+    "semver": "6.3.0",
+    "style-loader": "1.1.3",
     "styled-components": "^5.0.0",
+    "terser-webpack-plugin": "2.3.4",
+    "ts-pnp": "1.1.5",
     "typescript": "^3.7.5",
-    "validator": "^12.2.0"
+    "url-loader": "2.3.0",
+    "validator": "^12.2.0",
+    "webpack": "4.41.5",
+    "webpack-dev-server": "3.10.1",
+    "webpack-manifest-plugin": "2.2.0",
+    "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
-    "start": "cross-env NODE_PATH=src react-scripts start",
-    "build": "cross-env NODE_PATH=src react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "cross-env NODE_PATH=src node scripts/start.js",
+    "build": "cross-env NODE_PATH=src node scripts/build.js",
+    "test": "node scripts/test.js --env=jsdom"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -97,5 +144,62 @@
     "@types/immutable": "^3.8.7",
     "@types/redux": "^3.6.0",
     "cross-env": "^6.0.3"
+  },
+  "jest": {
+    "roots": [
+      "<rootDir>/src"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!src/**/*.d.ts"
+    ],
+    "setupFiles": [
+      "react-app-polyfill/jsdom"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.tsx"
+    ],
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
+      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
+    ],
+    "testEnvironment": "jest-environment-jsdom-fourteen",
+    "transform": {
+      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
+      "^.+\\.module\\.(css|sass|scss)$"
+    ],
+    "modulePaths": [
+      "C:\\Users\\multicampus\\Desktop\\pjt\\sub3\\front_end\\src"
+    ],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web",
+      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
+    },
+    "moduleFileExtensions": [
+      "web.js",
+      "js",
+      "web.ts",
+      "ts",
+      "web.tsx",
+      "tsx",
+      "json",
+      "web.jsx",
+      "jsx",
+      "node"
+    ],
+    "watchPlugins": [
+      "jest-watch-typeahead/filename",
+      "jest-watch-typeahead/testname"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
   }
 }
